# MADS-DL-Exam2

./: README.md  pyproject.toml  requirements.txt
src/mads_dl_exam2/: Exam2.ipynb  neuralnet.py  utils.py
src/mads_dl_exam2/data/: cv_hp_optimization  eval_dna  eval_king  ml_dna  ml_dna_conf.p  ml_king  ml_king_conf.p
src/mads_dl_exam2/logs/DL-Exam2/layer=2-lr=0.0001-batchsize=128-cv=None/: events.out.tfevents.1656278944.XPS-15.9236.4  events.out.tfevents.1656280544.XPS-15.9236.5
src/mads_dl_exam2/logs/DL-Exam2/layer=2-lr=0.0001-batchsize=32-cv=None/: events.out.tfevents.1656275482.XPS-15.9236.0  events.out.tfevents.1656277284.XPS-15.9236.1
src/mads_dl_exam2/logs/DL-Exam2/layer=2-lr=0.0001-batchsize=64-cv=None/: events.out.tfevents.1656277301.XPS-15.9236.2  events.out.tfevents.1656278927.XPS-15.9236.3
src/mads_dl_exam2/logs/DL-Exam2/layer=2-lr=0.001-batchsize=128-cv=None/: events.out.tfevents.1656283897.XPS-15.9236.10  events.out.tfevents.1656285480.XPS-15.9236.11
src/mads_dl_exam2/logs/DL-Exam2/layer=2-lr=0.001-batchsize=32-cv=None/: events.out.tfevents.1656280560.XPS-15.9236.6  events.out.tfevents.1656282244.XPS-15.9236.7
src/mads_dl_exam2/logs/DL-Exam2/layer=2-lr=0.001-batchsize=64-cv=None/: events.out.tfevents.1656282260.XPS-15.9236.8  events.out.tfevents.1656283880.XPS-15.9236.9
src/mads_dl_exam2/logs/DL-Exam2/layer=2-lr=0.01-batchsize=128-cv=None/: events.out.tfevents.1656288804.XPS-15.9236.16  events.out.tfevents.1656290381.XPS-15.9236.17
(+263 files in other folders)
