[tool.poetry]
name = "mads_dl_exam2"
version = "0.1.0"
description = ""
authors = ["Janosch Hoefer"]

[tool.poetry.scripts]
main = "src.mads_dl_exam2.main:main"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
protobuf = "~3.20.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
ipywidgets = "^7.7.0"
tensorboard = "^2.9.0"
pytorch-lightning = "^1.6.4"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
